--- a/join.html
+++ b/join.html
@@ -67,12 +67,12 @@
         Postdocs.
       </b>
       We are recruiting multiple postdocs.
-      We are specifically looking one postdoc who is an expert in <b>constraint satisfaction problems (SMT/SAT/ASP)</b>.
+      We are specifically looking one postdoc who is an expert in <b>constraint satisfaction problems (SAT/ASP/SMT)</b>.
       If interested, <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us with a copy of your CV and a brief outline of your interests and expertises.
     </b>
     <p>
       <b>DPhil/PhD students.</b>
-      We are looking for keen students. You can propose a specific research topic, or may ask <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">me</a> for suggestions before applying. Information on applying to the Oxford DPhil program for computer Science is available <a href="https://www.ox.ac.uk/admissions/graduate/courses/dphil-computer-science">here</a>.
+      We are looking for keen students. You can propose a specific research topic, or may ask <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">me</a> for suggestions before applying. Information on applying to the Oxford DPhil program for Computer Science is available <a href="https://www.ox.ac.uk/admissions/graduate/courses/dphil-computer-science">here</a>.
     </p>
 
     <p>
