--- a/people.html
+++ b/people.html
@@ -63,6 +63,8 @@
 
 
     <hr>
+
+
     <p>
       Andrew Cropper. Group Leader.
     </p>
@@ -72,10 +74,20 @@
     </p>
 
     <p>
-      Joe Bloggs. DPhil student.
+      Brad Hunter. MSc student.
     </p>
 
+    <p>
+      Mathias Jackermeier. MSc student.
+    </p>
 
+    <p>
+      John Wahlig. MSc student.
+    </p>
+
+    <p>
+      Cristian Dinu. MSc student.
+    </p>
 
 
   </div>
