--- a/index.html
+++ b/index.html
@@ -65,14 +65,21 @@
 
     <p>
       The <b>Logic and Learning</b> group designs machine learning algorithms that <i>learn</i> algorithms.
-       <!-- such as learning sorting algorithms from examples of unsorted and sorted lists. -->
-      We focus on learning techniques that use mathematical logic, known as <b>inductive logic programming</b> (ILP) or <b>logic-based machine learning</b>.
+      We focus on techniques that use mathematical logic, known as <b>inductive logic programming</b> (ILP).
 
     </p>
 
     <p><b>News</b></p>
 
+    <ul>
+    <li><b>03/2021</b> -
+        We will recruit multiple postdocs in 2021 and 2022 to work on the EPSRC-funded project <a href="https://gow.epsrc.ukri.org/NGBOViewGrant.aspx?GrantRef=EP/V040340/1">The Automatic Computer Scientist</a>.
+        The aim is to accelerate algorithm discovery using ILP.
+        If interested, please see the <a href="join.html">join</a> page.
+      </li>
+    </ul>
 
+    </ul>
 
 
   </div>
