--- a/join.html
+++ b/join.html
@@ -67,7 +67,7 @@
         Postdocs.
       </b>
       We are recruiting multiple postdocs.
-      We are specifically looking one postdoc who is an expert in <b>constraint satisfaction problems (SAT/ASP/SMT)</b>.
+      We are specifically looking one postdoc who is an expert in <b>constraint satisfaction problems (SAT/ASP/SMT/CP)</b>.
       If interested, <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us with a copy of your CV and a brief outline of your interests and expertises.
     </b>
     <p>
