--- a/people.html
+++ b/people.html
@@ -86,7 +86,11 @@
     </p>
 
     <p>
-      Cristian Dinu. MSc student.
+      Cristian Dinu. BA student.
+    </p>
+
+    <p>
+      Victor Vasiesiu. BA student.
     </p>
 
 
