--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     </style>
 
-    <title>Logic & Learning lab</title>
+    <title>Logic and Learning group</title>
   </head>
   <body>
 
@@ -44,13 +44,16 @@
 <div class="container">
 
   <div class="center">
+
     <p>
       <b>
+
         <span style="font-size:30px;">Logic and learning group</span>
           <br>
         <span style="font-size:20px;">University of Oxford</span>
       </b>
     </p>
+    <!-- <img src="imgs/logo.jpg" width="200"> -->
     <p>
       <b>
         <a href="index.html">News</a>
