--- a/TEMPLATE.html
+++ b/TEMPLATE.html
@@ -18,7 +18,7 @@
 
       a:link, a:visited {
         color: #000000;
-        /*text-decoration: none;*/
+        text-decoration: none;
       }
 
       a:hover {
@@ -70,20 +70,7 @@
         </p>
       </div>
       <hr>
-      <p>
-        The Logic and Learning (LOL) lab designs machine learning algorithms that <i>learn</i> algorithms.
-        We focus on <b><a href="https://arxiv.org/pdf/2008.07912.pdf">Inductive Logic Programming</a></b> (ILP), which combines machine learning and mathematical logic.
-      </p>
-
-      <p><b>News</b></p>
-
-      <ul>
-        <li><b>03/2021</b> -
-        We will recruit multiple postdocs in 2021 and 2022 to work on the EPSRC-funded project <i><b><a href="https://gow.epsrc.ukri.org/NGBOViewGrant.aspx?GrantRef=EP/V040340/1">The Automatic Computer Scientist</a></b></i>.
-        The aim is to accelerate algorithm discovery using ILP.
-        If interested, please see the <a href="join.html">join</a> page.
-        </li>
-      </ul>
+      CONTENT!!
     </div>
   </body>
 </html>
