--- a/join.html
+++ b/join.html
@@ -1,10 +1,14 @@
-  <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
+  <head>
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet"> -->
+    <!-- <link href="style.css" rel="stylesheet"> -->
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
     <style>
+    /*<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">*/
 
-
-
+      /*@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');*/
+      @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');
 
       body{
         font-family: 'Roboto', sans-serif;
@@ -14,6 +18,11 @@
 
       a:link, a:visited {
         color: #000000;
+        /*text-decoration: none;*/
+      }
+
+      a:hover {
+        text-decoration: underline;
       }
 
       .center {
@@ -22,6 +31,11 @@
 
       .bold {
         font-weight: bold
+      }
+
+      .title {
+        font-size:40pt;
+        font-weight: bold;
       }
 
       .container{
@@ -36,38 +50,32 @@
 
     </style>
 
-    <title>Logic and Learning lab</title>
+
+    <title>Logic & Learning lab</title>
   </head>
   <body>
-
-
-<div class="container">
-
-  <div class="center">
-    <p>
-      <b>
-        <span style="font-size:30px;">Logic and learning group</span>
-          <br>
-        <span style="font-size:20px;">University of Oxford</span>
-      </b>
-    </p>
-    <p>
-      <b>
-        <a href="index.html">News</a>
-        <a href="people.html">People</a>
-        <a href="pubs.html">Publications</a>
-        <a href="join.html">Join</a>
-      </b>
-    </p>
-    </div>
-
-    <hr>
-    <p>
+    <div class="container">
+      <div class="center">
+        <p>
+          <span class="title">Logic and Learning lab</span>
+        </p>
+        <img src="imgs/logo.jpg" width="200">
+        <p>
+          <b>
+            <a href="index.html">News</a>
+            <a href="people.html">People</a>
+            <a href="pubs.html">Publications</a>
+            <a href="join.html">Join</a>
+          </b>
+        </p>
+      </div>
+      <hr>
+ <p>
       <b>
         Postdocs.
       </b>
       We are recruiting multiple postdocs.
-      We are specifically looking one postdoc who is an expert in <b>constraint satisfaction problems (SAT/ASP/SMT/CP)</b>.
+      We are specifically looking for at least one postdoc who is an expert in <b>constraint satisfaction problems (SAT/ASP/SMT/CP)</b>.
       If interested, <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us with a copy of your CV and a brief outline of your interests and expertises.
     </b>
     <p>
@@ -81,9 +89,6 @@
       A small list of projects is available <a href="http://www.cs.ox.ac.uk/teaching/courses/projects/">here</a>.
       If interested, <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us with (i) a copy of your CV, (ii) the courses you will take, and (iii) and a brief outline of your interests and expertises.
     </p>
-
-
-
-  </div>
-
-  </body></html>
+    </div>
+  </body>
+</html>
