--- a/pubs.html
+++ b/pubs.html
@@ -1,10 +1,14 @@
-  <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
+  <head>
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet"> -->
+    <!-- <link href="style.css" rel="stylesheet"> -->
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
     <style>
+    /*<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">*/
 
-
-
+      /*@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');*/
+      @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');
 
       body{
         font-family: 'Roboto', sans-serif;
@@ -14,6 +18,11 @@
 
       a:link, a:visited {
         color: #000000;
+        /*text-decoration: none;*/
+      }
+
+      a:hover {
+        text-decoration: underline;
       }
 
       .center {
@@ -22,6 +31,11 @@
 
       .bold {
         font-weight: bold
+      }
+
+      .title {
+        font-size:40pt;
+        font-weight: bold;
       }
 
       .container{
@@ -36,32 +50,28 @@
 
     </style>
 
+
     <title>Logic & Learning lab</title>
   </head>
   <body>
+    <div class="container">
+      <div class="center">
+        <p>
+          <span class="title">Logic and Learning lab</span>
+        </p>
+        <img src="imgs/logo.jpg" width="200">
+        <p>
+          <b>
+            <a href="index.html">News</a>
+            <a href="people.html">People</a>
+            <a href="pubs.html">Publications</a>
+            <a href="join.html">Join</a>
+          </b>
+        </p>
+      </div>
+      <hr>
 
-
-<div class="container">
-
-  <div class="center">
-    <p>
-      <b>
-        <span style="font-size:30px;">Logic and learning group</span>
-          <br>
-        <span style="font-size:20px;">University of Oxford</span>
-      </b>
-    </p>
-    <p>
-      <b>
-        <a href="index.html">News</a>
-        <a href="people.html">People</a>
-        <a href="pubs.html">Publications</a>
-        <a href="join.html">Join</a>
-      </b>
-    </p>
-    </div>
-    <hr>
-    <p>Journals</p>
+<p>Journals</p>
     <ol>
 
       <li>
@@ -452,9 +462,6 @@ Dagstuhl, 2019
       </li>
     </ul>
 
-
-
-
-  </div>
-
-  </body></html>
+    </div>
+  </body>
+</html>
