--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <html>
   <head>
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet"> -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet"> -->
-    <!-- <link href="style.css" rel="stylesheet"> -->
-
     <style>
-    /*<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">*/
-
-      /*@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');*/
       @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');
 
       body{
@@ -51,7 +44,7 @@
     </style>
 
 
-    <title>Logic & Learning lab</title>
+    <title>Logic and Learning lab</title>
   </head>
   <body>
     <div class="container">
@@ -71,8 +64,9 @@
       </div>
       <hr>
       <p>
-        The Logic and Learning (LOL) lab designs machine learning algorithms that <i>learn</i> algorithms.
-        We focus on <b><a href="https://arxiv.org/pdf/2008.07912.pdf">Inductive Logic Programming</a></b> (ILP), which combines machine learning and mathematical logic.
+        The Logic and Learning (LOL) lab works on combining logic and machine learning, known as <b><a href="https://arxiv.org/pdf/2008.07912.pdf">Inductive Logic Programming</a></b> (ILP).
+        <!-- In other words, we use mathematidesigns machine learning algorithms that <i>learn</i> algorithms. -->
+        <!-- , which combines machine learning and mathematical logic. -->
       </p>
 
       <p><b>News</b></p>
