--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <ul>
         <li><b>03/2021</b> -
-        We will recruit multiple postdocs in 2021 and 2022 to work on the EPSRC-funded project <i><b><a href="https://gow.epsrc.ukri.org/NGBOViewGrant.aspx?GrantRef=EP/V040340/1">The Automatic Computer Scientist</a></b></i>.
+        We will recruit multiple postdocs in 2021 and 2022 to work on the EPSRC-funded project <i><b><a href="https://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
         The aim is to accelerate algorithm discovery using ILP.
         If interested, please see the <a href="join.html">join</a> page.
         </li>
