--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       }
 
       .title {
-        font-size:40pt;
+        font-size:30pt;
         font-weight: bold;
       }
 
@@ -46,12 +46,13 @@
 
     <title>Logic and Learning lab</title>
   </head>
+
   <body>
     <div class="container">
       <div class="center">
-        <p>
+        <div>
           <span class="title">Logic and Learning lab</span>
-        </p>
+        </div>
         <img src="imgs/logo.jpg" width="200">
         <p>
           <b>
@@ -63,11 +64,12 @@
         </p>
       </div>
       <hr>
-      <p>
-        The Logic and Learning (LOL) lab works on combining logic and machine learning, known as <b><a href="https://arxiv.org/pdf/2008.07912.pdf">Inductive Logic Programming</a></b> (ILP).
+
+      <div>
+        The Logic and Learning (LOL) lab works on logic and machine learning, i.e. <b><a href="https://arxiv.org/pdf/2008.07912.pdf">Inductive Logic Programming</a></b> (ILP).
         <!-- In other words, we use mathematidesigns machine learning algorithms that <i>learn</i> algorithms. -->
         <!-- , which combines machine learning and mathematical logic. -->
-      </p>
+      </div>
 
       <p><b>News</b></p>
 
