--- a/join.html
+++ b/join.html
@@ -34,7 +34,7 @@
       }
 
       .title {
-        font-size:40pt;
+        font-size:30pt;
         font-weight: bold;
       }
 
@@ -56,9 +56,9 @@
   <body>
     <div class="container">
       <div class="center">
-        <p>
+        <div>
           <span class="title">Logic and Learning lab</span>
-        </p>
+        </div>
         <img src="imgs/logo.jpg" width="200">
         <p>
           <b>
@@ -74,8 +74,8 @@
       <b>
         Postdocs.
       </b>
-      We are recruiting multiple postdocs.
-      We are specifically looking for at least one postdoc who is an expert in <b>constraint satisfaction problems (SAT/ASP/SMT/CP)</b>.
+      We are recruiting multiple 1-3 year postdocs in 2021, 2022, and 2023 to work on the EPSRC-funded project <i><b><a href="https://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
+      We are specifically looking for at least one expert in <b>constraint satisfaction problems (SAT/ASP/SMT/CP)</b>.
       If interested, <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us with a copy of your CV and a brief outline of your interests and expertises.
     </b>
     <p>
