--- a/people.html
+++ b/people.html
@@ -34,7 +34,7 @@
       }
 
       .title {
-        font-size:40pt;
+        font-size:30pt;
         font-weight: bold;
       }
 
@@ -56,9 +56,9 @@
   <body>
     <div class="container">
       <div class="center">
-        <p>
+        <div>
           <span class="title">Logic and Learning lab</span>
-        </p>
+        </div>
         <img src="imgs/logo.jpg" width="200">
         <p>
           <b>
@@ -71,13 +71,32 @@
       </div>
       <hr>
 
-    <p>
-      Andrew Cropper. Group Leader.
-    </p>
+    <div>
+      <div style="display:inline-block;vertical-align:top;">
+          <img src="https://www.cs.ox.ac.uk/files/10552//4k8EnmzY_400x400.jpg" height="125">
+      </div>
+      <div style="display:inline-block;">
+          <div><a href="http://www.andrewcropper.com">Andrew Cropper</a></div>
+          <div>Group Leader</div>
+      </div>
+    </div>
+    <hr>
+
+    <!-- <div>
+      <div style="display:inline-block;vertical-align:top;">
+          <img src="https://scholar.googleusercontent.com/citations?view_op=medium_photo&user=KiCL7SoAAAAJ&citpid=1" height="125">
+      </div>
+      <div style="display:inline-block;">
+          <div><a href="https://scholar.google.com/citations?user=KiCL7SoAAAAJ&hl=en">Rolf Morel</a></div>
+          <div>DPhil student</div>
+      </div>
+    </div>
+    <hr> -->
 
     <p>
       Rolf Morel. DPhil student.
     </p>
+
 
     <p>
       Brad Hunter. MSc student.
