--- a/pubs.html
+++ b/pubs.html
@@ -34,7 +34,7 @@
       }
 
       .title {
-        font-size:40pt;
+        font-size:30pt;
         font-weight: bold;
       }
 
@@ -56,9 +56,9 @@
   <body>
     <div class="container">
       <div class="center">
-        <p>
+        <div>
           <span class="title">Logic and Learning lab</span>
-        </p>
+        </div>
         <img src="imgs/logo.jpg" width="200">
         <p>
           <b>
