--- a/people.html
+++ b/people.html
@@ -82,7 +82,7 @@
     </div>
     <hr>
 
-    <!-- <div>
+    <div>
       <div style="display:inline-block;vertical-align:top;">
           <img src="https://scholar.googleusercontent.com/citations?view_op=medium_photo&user=KiCL7SoAAAAJ&citpid=1" height="125">
       </div>
@@ -91,12 +91,12 @@
           <div>DPhil student</div>
       </div>
     </div>
-    <hr> -->
+    <hr>
 
-    <p>
+<!--     <p>
       Rolf Morel. DPhil student.
     </p>
-
+ -->
 
     <p>
       Brad Hunter. MSc student.
