--- a/join.html
+++ b/join.html
@@ -75,8 +75,8 @@
         Postdocs.
       </b>
       We are recruiting multiple 1-3 year postdocs in 2021, 2022, and 2023 to work on the EPSRC-funded project <i><b><a href="https://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
-      We are specifically looking for at least one expert in <b>constraint satisfaction problems (SAT/ASP/SMT/CP)</b>.
-      If interested, <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us with a copy of your CV and a brief outline of your interests and expertises.
+      We are looking for at least one expert in <b>constraint satisfaction problems (SAT/ASP/SMT/CP)</b>.
+      If interested, please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us with a copy of your CV and a brief outline of your interests and expertises.
     </b>
     <p>
       <b>DPhil/PhD students.</b>
