--- a/join.html
+++ b/join.html
@@ -74,7 +74,7 @@
       <b>
         Postdocs.
       </b>
-      We are recruiting multiple 1-3 year postdocs in 2021, 2022, and 2023 to work on the EPSRC-funded project <i><b><a href="https://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
+      We are recruiting multiple 1-3 year postdocs in 2021, 2022, and 2023 to work on the EPSRC-funded project <i><b><a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
       We are looking for at least one expert in <b>constraint satisfaction problems (SAT/ASP/SMT/CP)</b>.
       If interested, please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us with a copy of your CV and a brief outline of your interests and expertises.
     </b>
