--- a/join.html
+++ b/join.html
@@ -76,7 +76,7 @@
       </b>
       We are recruiting multiple 1-3 year postdocs in 2021, 2022, and 2023 to work on the EPSRC-funded project <i><b><a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
       We are looking for at least one expert in <b>constraint satisfaction problems (SAT/ASP/SMT/CP)</b>.
-      If interested, please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us with a copy of your CV and a brief outline of your interests and expertises.
+      If interested, please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us with a copy of your CV and a brief outline of your research interest.
     </b>
     <p>
       <b>DPhil/PhD students.</b>
