--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       <ul>
         <li><b>03/2021</b> -
-        We will recruit multiple postdocs in 2021 and 2022 to work on the EPSRC-funded project <i><b><a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
+        We will recruit multiple postdocs in 2021, 2022, and 2023 to work on the EPSRC-funded project <i><b><a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
         The aim is to accelerate algorithm discovery using ILP.
         If interested, please see the <a href="join.html">join</a> page.
         </li>
