--- a/join.html
+++ b/join.html
@@ -77,7 +77,7 @@
       We are recruiting multiple 1-3 year postdocs in 2021, 2022, and 2023 to work on the EPSRC-funded project <i><b><a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
       We are looking for at least one expert in <b>constraint satisfaction problems (SAT/ASP/SMT/CP)</b>.
       In general, we are looking for people interested in logic and machine learning.
-      If interested (or to find out more) please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us your CV and research interests!
+      If interested (or to find out more) please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us.
     </b>
     <p>
       <b>DPhil/PhD students.</b>
