--- a/join.html
+++ b/join.html
@@ -87,7 +87,8 @@
     <p>
       <b>3rd/4th year students and MSc students.</b>
       We are happy to supervise student projects.
-      A small list of projects is available <a href="http://www.cs.ox.ac.uk/teaching/courses/projects/">here</a>.
+      A small list of projects is available <a href="http://www.cs.ox.ac.uk/teaching/courses/projects/">here</a> and
+      <a href="projects.txt">here</a>.
       If interested, <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us with (i) your CV, (ii) the courses you will take, and (iii) and a brief outline of your interests and expertises.
     </p>
     </div>
