--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <img src="imgs/logo.jpg" width="200">
         <p>
           <b>
-            <a href="index.html">News</a>
+            <a href="index.html">About</a>
             <a href="people.html">People</a>
             <a href="pubs.html">Publications</a>
             <a href="join.html">Join</a>
@@ -66,20 +66,14 @@
       <hr>
 
       <div>
-        The Logic and Learning (LOL) lab works on logic and machine learning, i.e. <b><a href="https://arxiv.org/pdf/2008.07912.pdf">Inductive Logic Programming</a></b> (ILP).
-        <!-- In other words, we use mathematidesigns machine learning algorithms that <i>learn</i> algorithms. -->
-        <!-- , which combines machine learning and mathematical logic. -->
+        The Logic and Learning (LOL) lab works on logic and machine learning, i.e. <b><a href="https://arxiv.org/pdf/2008.07912.pdf">Inductive Logic Programming</a></b> (ILP) at the University of Oxford.
+        We developed the ILP system <a href="
+        https://github.com/logic-and-learning-lab/Popper"><b>Popper</b></a>
       </div>
-
-      <p><b>News</b></p>
-
-      <ul>
-        <li><b>03/2021</b> -
-        We will recruit multiple postdocs in 2021, 2022, and 2023 to work on the EPSRC-funded project <i><b><a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
-        The aim is to accelerate algorithm discovery using ILP.
+        <p>
+        We will recruit multiple postdocs in 2021, 2022, and 2023 to work on the EPSRC-funded project <b><a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b>.
         If interested, please see the <a href="join.html">join</a> page.
-        </li>
-      </ul>
+      </p>
     </div>
   </body>
 </html>
