--- a/join.html
+++ b/join.html
@@ -62,7 +62,7 @@
         <img src="imgs/logo.jpg" width="200">
         <p>
           <b>
-            <a href="index.html">News</a>
+            <a href="index.html">About</a>
             <a href="people.html">People</a>
             <a href="pubs.html">Publications</a>
             <a href="join.html">Join</a>
@@ -74,14 +74,14 @@
       <b>
         Postdocs.
       </b>
-      We are recruiting multiple 1-3 year postdocs in 2021, 2022, and 2023 to work on the EPSRC-funded project <i><b><a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
-      We are looking for at least one expert in <b>constraint satisfaction problems (SAT/ASP/SMT/CP)</b>.
-      In general, we are looking for people interested in logic and machine learning.
+      We will recruit multiple 1-3 year postdocs in 2021, 2022, and 2023 to work on the EPSRC-funded project <i><b><a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
+      We are looking for people interested in logic and machine learning.
       If interested (or to find out more) please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us.
     </b>
     <p>
       <b>DPhil/PhD students.</b>
-      We are looking for keen students. You can propose a specific research topic, or may ask <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">me</a> for suggestions before applying. Information on applying to the Oxford DPhil program for Computer Science is available <a href="https://www.ox.ac.uk/admissions/graduate/courses/dphil-computer-science">here</a>.
+      We are looking for keen students. You can propose a specific research topic, or may <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">ask </a> for suggestions before applying.
+      Information on applying to the Oxford DPhil program for Computer Science is available <a href="https://www.ox.ac.uk/admissions/graduate/courses/dphil-computer-science">here</a>.
     </p>
 
     <p>
@@ -90,7 +90,39 @@
       A small list of projects is available <a href="http://www.cs.ox.ac.uk/teaching/courses/projects/">here</a> and
       <a href="projects.txt">here</a>.
       If interested, <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us with (i) your CV, (ii) the courses you will take, and (iii) and a brief outline of your interests and expertises.
+      Some previous projects are listed below.
+      <ul>
+
+
+      <li>John Wahlig, MSc,
+        Learning logic programs from noisy failures
+      </li>
+
+      <li>Brad Hunter, MSc,
+        Preprocessing in inductive logic programming
+      </li>
+
+      <li>Andrei Diaconu, BA,
+        <a href="https://arxiv.org/pdf/2011.08881.pdf">
+        Learning functional programs with function invention and
+reuse
+        </a>
+      </li>
+      <li>Alastair Flynn, BA,
+        <a href="https://arxiv.org/pdf/2008.01664.pdf">
+        Inducing game rules from varying quality game play
+        </a>
+      </li>
+      <li>Rolf Morel, MSc,
+        <a href="https://arxiv.org/pdf/2102.12553.pdf">
+        Refinement Type Directed Search for Meta-Interpretive Learning of Higher-Order Logic Programs
+        </a>
+      </li>
+    </ul>
     </p>
+
+
+
     </div>
   </body>
 </html>
