--- a/people.html
+++ b/people.html
@@ -62,7 +62,7 @@
         <img src="imgs/logo.jpg" width="200">
         <p>
           <b>
-            <a href="index.html">News</a>
+            <a href="index.html">About</a>
             <a href="people.html">People</a>
             <a href="pubs.html">Publications</a>
             <a href="join.html">Join</a>
@@ -72,55 +72,91 @@
       <hr>
 
     <div>
-      <div style="display:inline-block;vertical-align:top;">
-          <img src="https://www.cs.ox.ac.uk/files/10552//4k8EnmzY_400x400.jpg" height="125">
+      <div>
+        <a href="http://www.andrewcropper.com">Andrew Cropper</a>
       </div>
-      <div style="display:inline-block;">
-          <div><a href="http://www.andrewcropper.com">Andrew Cropper</a></div>
-          <div>Group Leader</div>
+      <div>
+        <img src="https://www.cs.ox.ac.uk/files/10552//4k8EnmzY_400x400.jpg" height="175">
+      </div>
+      <div>
+        Group Leader
       </div>
     </div>
     <hr>
 
     <div>
-      <div style="display:inline-block;vertical-align:top;">
-          <img src="https://scholar.googleusercontent.com/citations?view_op=medium_photo&user=KiCL7SoAAAAJ&citpid=1" height="125">
+      <div>
+        <a href="https://scholar.google.com/citations?user=UanFJEsAAAAJ&hl=en">C&eacute;line Hocquette</a>
       </div>
-      <div style="display:inline-block;">
-          <div><a href="https://scholar.google.com/citations?user=KiCL7SoAAAAJ&hl=en">Rolf Morel</a></div>
-          <div>DPhil student</div>
+      <div>
+        <!-- <img src="https://www.cs.ox.ac.uk/files/10552//4k8EnmzY_400x400.jpg" height="175"> -->
+      </div>
+      <div>
+        Postdoc
       </div>
     </div>
     <hr>
 
-<!--     <p>
-      Rolf Morel. DPhil student.
-    </p>
- -->
+    <div>
+      <div>
+        <a href="<a href="https://scholar.google.com/citations?user=KiCL7SoAAAAJ&hl=en>Rolf Morel</a>
+      </div>
+      <div>
+        <img src="https://scholar.googleusercontent.com/citations?view_op=medium_photo&user=KiCL7SoAAAAJ&citpid=1" height="175">
+      </div>
+      <div>DPhil student</div>
+        <div>Thesis:
+        <a href="https://www.aaai.org/AAAI21Papers/DC-317.MorelR.pdf">Constraint-Driven Learning of Logic Programs</a>
+        </div>
+    </div>
+    <hr>
+
+    <div>
+      <div style="display:inline-block;vertical-align:top;">
+
+      </div>
+      <div style="display:inline-block;">
+          <div><a href="https://scholar.google.com/citations?user=KiCL7SoAAAAJ&hl=en">Rolf Morel</a></div>
+
+      </div>
+    </div>
+    <hr>
 
     <p>
       Brad Hunter. MSc student.
     </p>
 
+    <hr>
+
+
     <p>
       Mathias Jackermeier. MSc student.
     </p>
+    <hr>
 
     <p>
       John Wahlig. MSc student.
     </p>
 
+    <hr>
+
     <p>
       Cristian Dinu. BA student.
     </p>
+
+    <hr>
 
     <p>
       Victor Vasiesiu. BA student.
     </p>
 
+    <hr>
+
     <p>
       Bogdan Cretu. BA student.
     </p>
+
+    <hr>
 
 
     </div>
