--- a/pubs.html
+++ b/pubs.html
@@ -1,14 +1,9 @@
 <html>
   <head>
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet"> -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet"> -->
-    <!-- <link href="style.css" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
 
     <style>
-    /*<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">*/
 
-      /*@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');*/
-      @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');
 
       body{
         font-family: 'Roboto', sans-serif;
@@ -73,6 +68,14 @@
 
 <p>Journals</p>
     <ol>
+
+      <li>
+        <a href="https://arxiv.org/pdf/2102.10556.pdf"><b>Inductive logic programming at 30</b></a>
+        <br>
+        A. Cropper, S. Dumančić, R. Evans, and S.H. Muggleton
+        <br>
+        Machine learning 2021.
+      </li>
 
       <li>
         <a href="https://arxiv.org/pdf/2005.02259.pdf"><b>Learning programs by learning from failures</b></a>
@@ -344,124 +347,6 @@
 
     </ol>
 
-    <p>Theses</p>
-    <ol>
-      <li>
-        <a href="http://andrewcropper.com/pubs/phd-thesis.pdf"><b>Efficiently learning efficient programs</b></a>
-        <br>
-        A. Cropper.
-        PhD thesis, Imperial College London, 2017.
-      </li>
-      <li>
-        <a href="http://andrewcropper.com/pubs/msc-thesis.pdf"><b>Modelling stock volume using Twitter</b></a>
-        <br>
-        A. Cropper.
-        MSc thesis, University of Oxford, 2011.
-      </li>
-    </ol>
-
-
-
-
-  <hr>
-
-  <p><b>Talks</b></p>
-
-
-
-  <ul>
-
-<li><a href="http://andrewcropper.com/slides/2021-ucsd-ilp-intro.pdf"><b>Inductive logic programming</b></a>
-UC San Diego, 2021
-</li>
-
-<li><a href="http://andrewcropper.com/slides/2021-potsdam-popper.pdf"><b>Learning programs from failures</b></a>
-Potsdam, 2021
-</li>
-
-<li><a href="http://andrewcropper.com/slides/2020-mit-popper.pdf"><b>Learning programs from failures</b></a>
-MIT, 2020
-</li>
-
-<li><a href="http://andrewcropper.com/slides/2019-leuven-metaho.pdf"><b>Learning higher-order logic programs</b></a>
-
-KU Leuven, 2019
-</li>
-
-<li><a href="http://andrewcropper.com/slides/2019-leuven-iggp.pdf"><b>Inductive general game playing</b></a>
-
-KU Leuven, 2019
-</li>
-
-<li><a href="http://andrewcropper.com/slides/2019-leuven-playgol.pdf"><b>Playgol: learning programs through play</b></a>
-
-KU Leuven, 2019
-</li>
-
-<li><a href="http://andrewcropper.com/slides/2019-mit-iggp.pdf"><b>Inductive general game playing</b></a>
-
-MIT, 2019
-</li>
-<li><a href="http://andrewcropper.com/slides/2019-mit-playgol.pdf"><b>Playgol: learning programs through play</b></a>
-
-  MIT, 2019
-</li>
-<li><a href="http://andrewcropper.com/slides/mi21-playgol.pdf"><b>Playgol: learning programs through play</b></a>
-
-Machine intelligence 21, 2019
-</li>
-
-  <li><a href="http://andrewcropper.com/slides/2019-dagstuhl-iggp.pdf"><b>Inductive general game playing</b></a>
-
-Dagstuhl, 2019
-</li>
-
-  <li><a href="http://andrewcropper.com/slides/2019-dagstuhl-playgol.pdf"><b>Playgol: learning programs through play</b></a>
-
-  Dagstuhl, 2019
-</li>
-
-    <li><a href="http://andrewcropper.com/slides/2019-oxford.pdf"><b>Learning algorithms using logic</b></a>
-
-    University of Oxford, 2019
-  </li>
-
-    <li><a href="http://andrewcropper.com/slides/2018-mit-metaopt.pdf"><b>Learning efficient logic programs</b></a>
-    MIT, 2018
-  </li>
-
-    <li><a href="http://andrewcropper.com/slides/2017-dagstuhl-metaopt.pdf"><b>Learning efficient logic programs</b></a>
-
-      Dagstuhl, 2017
-    </li>
-
-    <li><a href="http://andrewcropper.com/slides/2017-dagstuhl-ho.pdf">
-      <b>Learning higher-order logic programs</b></a>
-
-      Dagstuhl, 2017
-    </li>
-
-      <li><a href="http://andrewcropper.com/slides/2016-mi20.pdf"><b>Learning efficient logic programs</b></a>
-
-      Machine intelligence 20, 2016
-    </li>
-
-      <li><b>Logic-based learning of programs</b>.
-
-      UC Berkeley, 2016
-    </li>
-
-      <li><b>Metagol</b>.
-
-        Dagstuhl, 2015
-      </li>
-
-      <li><b>Predicate invention in meta-interpretive learning</b>.
-
-        Wakayama University, Japan, 2014
-      </li>
-    </ul>
-
-    </div>
+      </div>
   </body>
 </html>
