--- a/people.html
+++ b/people.html
@@ -12,8 +12,8 @@
 
       body{
         font-family: 'Roboto', sans-serif;
-        font-size:15pt;
-        line-height: 1.5;
+        font-size:16pt;
+        line-height: 1.6;
       }
 
       a:link, a:visited {
@@ -54,7 +54,7 @@
     <title>Logic & Learning lab</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container" class="center">
       <div class="center">
         <div>
           <span class="title">Logic and Learning lab</span>
@@ -64,27 +64,24 @@
           <b>
             <a href="index.html">About</a>
             <a href="people.html">People</a>
-            <a href="pubs.html">Publications</a>
             <a href="join.html">Join</a>
           </b>
         </p>
       </div>
       <hr>
 
-    <div>
-      <div>
+    <div class="center">
+      <p>
         <a href="http://www.andrewcropper.com">Andrew Cropper</a>
-      </div>
+      </p>
       <div>
         <img src="https://www.cs.ox.ac.uk/files/10552//4k8EnmzY_400x400.jpg" height="175">
       </div>
-      <div>
-        Group Leader
-      </div>
+        <p>Group Leader</p>
     </div>
     <hr>
 
-    <div>
+    <div class="center">
       <div>
         <a href="https://scholar.google.com/citations?user=UanFJEsAAAAJ&hl=en">C&eacute;line Hocquette</a>
       </div>
@@ -97,67 +94,65 @@
     </div>
     <hr>
 
-    <div>
-      <div>
+    <div class="center">
+      <p>
         <a href="<a href="https://scholar.google.com/citations?user=KiCL7SoAAAAJ&hl=en>Rolf Morel</a>
-      </div>
-      <div>
+      </p>
+      <p>
         <img src="https://scholar.googleusercontent.com/citations?view_op=medium_photo&user=KiCL7SoAAAAJ&citpid=1" height="175">
-      </div>
-      <div>DPhil student</div>
+      </p>
+      <p>DPhil student</p>
         <div>Thesis:
         <a href="https://www.aaai.org/AAAI21Papers/DC-317.MorelR.pdf">Constraint-Driven Learning of Logic Programs</a>
         </div>
     </div>
     <hr>
 
-    <div>
-      <div style="display:inline-block;vertical-align:top;">
-
-      </div>
-      <div style="display:inline-block;">
-          <div><a href="https://scholar.google.com/citations?user=KiCL7SoAAAAJ&hl=en">Rolf Morel</a></div>
-
-      </div>
+    <div class="center">
+      <p>
+        Brad Hunter. MSc student
+      </p>
     </div>
-    <hr>
-
-    <p>
-      Brad Hunter. MSc student.
-    </p>
 
     <hr>
 
-
-    <p>
-      Mathias Jackermeier. MSc student.
-    </p>
-    <hr>
-
-    <p>
-      John Wahlig. MSc student.
-    </p>
+    <div class="center">
+      <p>
+        Mathias Jackermeier. MSc student
+      </p>
+    </div>
 
     <hr>
 
-    <p>
-      Cristian Dinu. BA student.
-    </p>
+    <div class="center">
+      <p>
+        John Wahlig. MSc student
+      </p>
+    </div>
 
     <hr>
 
-    <p>
-      Victor Vasiesiu. BA student.
-    </p>
+    <div class="center">
+      <p>
+        Cristian Dinu. BA student
+      </p>
+    </div>
 
     <hr>
 
-    <p>
-      Bogdan Cretu. BA student.
-    </p>
+    <div class="center">
+      <p>
+        Victor Vasiesiu. BA student
+      </p>
+    </div>
 
     <hr>
 
+    <div class="center">
+      <p>
+        Bogdan Cretu. BA student
+      </p>
+    </div>
 
     </div>
   </body>
