--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
       body{
         font-family: 'Roboto', sans-serif;
-        font-size:15pt;
-        line-height: 1.5;
+        font-size:16pt;
+        line-height: 1.6;
       }
 
       a:link, a:visited {
@@ -58,22 +58,308 @@
           <b>
             <a href="index.html">About</a>
             <a href="people.html">People</a>
-            <a href="pubs.html">Publications</a>
             <a href="join.html">Join</a>
           </b>
         </p>
       </div>
       <hr>
 
-      <div>
-        The Logic and Learning (LOL) lab works on logic and machine learning, i.e. <b><a href="https://arxiv.org/pdf/2008.07912.pdf">Inductive Logic Programming</a></b> (ILP) at the University of Oxford.
-        We developed the ILP system <a href="
-        https://github.com/logic-and-learning-lab/Popper"><b>Popper</b></a>
-      </div>
+      <p>
+        The Logic and Learning (LOL) lab is in the computer science department at the University of Oxford.
+        We work on logic and machine learning, i.e. <b><a href="https://arxiv.org/pdf/2008.07912.pdf">Inductive Logic Programming</a></b> (ILP).
+        We maintain the ILP system <a href="
+        https://github.com/logic-and-learning-lab/Popper"><b>Popper</b></a>.
+      </p>
+
         <p>
         We will recruit multiple postdocs in 2021, 2022, and 2023 to work on the EPSRC-funded project <b><a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b>.
         If interested, please see the <a href="join.html">join</a> page.
       </p>
+
+      <hr>
+      <p><b>Publications</b></p>
+
+      <p>Journals</p>
+    <ol>
+
+      <li>
+        <a href="https://arxiv.org/pdf/2102.10556.pdf"><b>Inductive logic programming at 30</b></a>
+        <br>
+        A. Cropper, S. Dumančić, R. Evans, and S.H. Muggleton
+        <br>
+        Machine learning 2021.
+      </li>
+
+      <li>
+        <a href="https://arxiv.org/pdf/2005.02259.pdf"><b>Learning programs by learning from failures</b></a>
+        <br>
+        A. Cropper and R. Morel
+        <br>
+        Machine learning 2021.
+        <br>
+        <!-- <a href="http://andrewcropper.com/slides/2019-ilp19-iggp.pdf">slides</a> -->
+        <!-- <a href="https://github.com/andrewcropper/mlj19-iggp">code</a> -->
+      </li>
+
+      <li>
+        <a href="https://arxiv.org/pdf/1906.09627.pdf"><b>Inductive general game playing</b></a>
+        <br>
+        A. Cropper, R. Evans, and M. Law
+        <br>
+        Machine learning 2020
+        <br>
+        <a href="http://andrewcropper.com/slides/2019-ilp19-iggp.pdf">slides</a>
+        <a href="https://github.com/andrewcropper/mlj19-iggp">code</a>
+        <a href="https://github.com/andrewcropper/iggp">dataset</a>
+      </li>
+
+
+      <li>
+        <a href="https://arxiv.org/pdf/1907.10952.pdf"><b>Logical minimisation of metarules</b></a>
+        <br>
+        A. Cropper and S. Tourret
+        <br>
+        Machine learning 2020
+        <br>
+        <a href="http://andrewcropper.com/slides/2019-ilp19-reduce.pdf">slides</a>
+        <a href="https://github.com/andrewcropper/mlj19-reduce">code</a>
+      </li>
+
+
+        <li>
+        <a href="https://arxiv.org/pdf/1907.10953.pdf"><b>Learning higher-order logic programs</b></a>
+        <br>
+        A. Cropper, R. Morel, and S.H. Muggleton
+        <br>
+        Machine learning 2020
+        <br>
+        <a href="http://andrewcropper.com/slides/2019-ilp19-metaho.pdf">slides</a>
+        <a href="https://github.com/andrewcropper/mlj19-metaho">code</a>
+      </li>
+
+
+
+      <li>
+
+        <a href="http://andrewcropper.com/pubs/mlj18-metaopt.pdf"><b>Learning efficient logic programs</b></a>
+        <br>
+        A. Cropper and S.H. Muggleton
+        <br>
+        Machine learning 2019
+        <br>
+        <a href="http://andrewcropper.com/slides/ilp18-metaopt-slides.pdf">slides</a>
+        <a href="https://github.com/andrewcropper/mlj18-metaopt">code</a>
+      </li>
+    </ol>
+
+    <p>Conferences</p>
+
+    <ol>
+
+
+
+      <li>
+        <a href="https://arxiv.org/abs/2004.09931"><b>Knowledge refactoring for inductive program synthesis</b></a>
+        <br>
+        S. Dumančić, T. Guns, and A. Cropper
+        <br>
+        AAAI 2021
+      </li>
+
+      <li>
+        <a href="https://arxiv.org/pdf/2004.09855.pdf"><b>Learning large logic programs by going beyond entailment</b></a>
+        <br>
+        A. Cropper and S. Dumančić
+        <br>
+        IJCAI 2020
+        <!-- <a href="http://andrewcropper.com/slides/2020-ijcai-brute.pdf">slides</a> -->
+        <!-- <a href="https://github.com/andrewcropper/ijcai20-brute">code</a> -->
+      </li>
+
+      <li>
+        <a href="https://arxiv.org/pdf/2002.11002.pdf"><b>Turning 30: new ideas in inductive logic programming</b></a>
+        <br>
+        A. Cropper, S. Dumančić, and S.H. Muggleton
+        <br>
+        IJCAI 2020
+        <!-- <a href="http://andrewcropper.com/slides/2020-ijcai-brute.pdf">slides</a> -->
+        <!-- <a href="https://github.com/andrewcropper/ijcai20-brute">code</a> -->
+      </li>
+
+      <li>
+        <a href="https://arxiv.org/pdf/1911.06643.pdf"><b>Forgetting to learn logic programs</b></a>
+        <br>
+        A. Cropper
+        <br>
+        AAAI 2020
+        <br>
+        <a href="http://andrewcropper.com/slides/2020-aaai-forgetgol.pdf">slides</a>
+        <a href="https://github.com/andrewcropper/aaai20-forgetgol">code</a>
+      </li>
+
+
+      <li>
+        <a href="http://andrewcropper.com/pubs/aaai20-metaho.pdf"><b>Learning higher-order programs through predicate invention</b></a>
+        <br>
+        A. Cropper, R. Morel, and S.H. Muggleton
+        <br>
+        AAAI 2020
+        <br>
+        <a href="http://andrewcropper.com/slides/2020-aaai-metaho.pdf">slides</a>
+      </li>
+
+      <li>
+        <a href="https://arxiv.org/pdf/1904.08993.pdf"><b>Playgol: learning programs through play</b></a>
+        <br>
+        A. Cropper
+        <br>
+        IJCAI 2019
+        <br>
+        <a href="http://andrewcropper.com/slides/ijcai19-playgol.pdf">slides</a>
+        <a href="https://github.com/andrewcropper/ijcai19-playgol">code</a>
+      </li>
+
+      <li>
+        <a href="https://arxiv.org/pdf/1902.09900.pdf"><b>SLD-resolution reduction of second-order horn fragments</b></a>
+        <br>
+        S. Tourret and A. Cropper
+        <br>
+        JELIA 2019
+      </li>
+
+      <li>
+        <a href="http://andrewcropper.com/pubs/jelia19-typed.pdf"><b>Typed meta-interpretive learning of logic programs</b></a>
+        <br>
+        R. Morel, A. Cropper, and L. Ong
+        <br>
+        JELIA 2019
+        <br>
+        <a href="http://andrewcropper.com/slides/jelia19-typed.pdf">slides</a>
+        <a href="https://github.com/rolfmorel/jelia19-typedmil">code</a>
+      </li>
+
+      <li>
+        <a href="http://andrewcropper.com/pubs/ilp18-dreduce.pdf"><b>Derivation reduction of metarules in meta-interpretive learning</b></a>
+        <br>
+        A. Cropper and S. Tourret
+        <br>
+        ILP 2018
+        <br>
+        <a href="http://andrewcropper.com/slides/ilp18-dreduce-slides.pdf">slides</a>
+        <a href="https://github.com/andrewcropper/ilp18-dreduce">code</a>
+      </li>
+
+      <li>
+        <a href="http://andrewcropper.com/pubs/ijcai16-metafunc.pdf"><b>Learning higher-order logic programs through abstraction and invention</b></a>
+        <br>
+        A. Cropper and S.H. Muggleton
+        <br>
+        IJCAI 2016
+        <br>
+        <a href="http://andrewcropper.com/slides/ijcai16-metafunc-slides.pdf">slides</a>
+        <a href="https://github.com/andrewcropper/ijcai16-metagolai">code</a>
+      </li>
+      <li>
+        <a href="http://andrewcropper.com/pubs/ijcai16-dc.pdf"><b>Logic-based inductive synthesis of efficient programs</b></a>
+        <br>
+        A. Cropper
+        <br>
+        IJCAI 2016
+        <br>
+        <a href="http://andrewcropper.com/slides/ijcai16-dc-slides.pdf">slides</a>
+      </li>
+
+      <li>
+        <a href="http://andrewcropper.com/pubs/ijcai15-metagolo.pdf"><b>Learning efficient logical robot strategies involving composable objects</b></a>
+        <br>
+        A. Cropper and S.H. Muggleton
+        <br>
+        IJCAI 2015
+        <br>
+        <a href="http://andrewcropper.com/slides/ijcai15-metagolo-slides.pdf">slides</a>
+        <a href="https://github.com/andrewcropper/ijcai15-compobj">code</a>
+      </li>
+      <li>
+        <a href="http://andrewcropper.com/pubs/ijcai15-dc.pdf"><b>Learning efficient logic programs</b></a>
+        <br>
+        A. Cropper
+        <br>
+        IJCAI 2015
+        <br>
+        <a href="http://andrewcropper.com/slides/ijcai15-dc-slides.pdf">slides</a>
+      </li>
+      <li>
+        <a href="http://andrewcropper.com/pubs/ilp15-datacurate.pdf"><b>Meta-interpretive learning of data transformation programs</b></a>
+        <br>
+        A. Cropper, A. Tamaddoni-Nezhad, and S.H. Muggleton
+        <br>
+        ILP 2015
+        <br>
+        <a href="http://andrewcropper.com/slides/ilp15-datacurate-slides.pdf">slides</a>
+        <a href="https://github.com/andrewcropper/ilp15-datacurate">code</a>
+      </li>
+      <li>
+        <a href="http://ceur-ws.org/Vol-1636/paper-02.pdf"><b>Typed meta-interpretive learning for proof strategies</b></a>
+        <br>
+        C. Farquhar, G. Grov, A. Cropper, S.H. Muggleton, and A. Bundy
+        <br>
+        ILP 2015
+      </li>
+
+      <li>
+        <a href="http://andrewcropper.com/pubs/scai15-incomplete.pdf"><b>Can predicate invention compensate for incomplete background knowledge?</b></a>
+        <br>
+        A. Cropper and S.H. Muggleton
+        <br>
+        SCAI 2015
+        <br>
+        <a href="http://andrewcropper.com/slides/scai15-incomplete-slides.pdf">slides</a>
+      </li>
+      <li>
+        <a href="http://andrewcropper.com/pubs/ilp14-minmeta.pdf"><b>Logical minimisation of meta-rules within meta-interpretive learning</b></a>
+        <br>
+        A. Cropper and S.H. Muggleton
+        <br>
+        ILP 2014
+        <br>
+        <a href="http://andrewcropper.com/slides/ilp14-minmeta-slides.pdf">slides</a>
+      </li>
+    </ol>
+
+    <p>Workshops</p>
+    <ol>
+      <li>
+        <a href="http://andrewcropper.com/pubs/termgraph18-dreduce.pdf"><b>SLD-resolution reduction of second-order Horn fragments</b></a>
+        <br>
+        S. Tourret and A. Cropper
+        <br>
+        Termgraph 2018
+      </li>
+
+      <li>
+        <a href="http://andrewcropper.com/pubs/iccsw14-scenes.pdf"><b>Identifying and inferring objects from textual descriptions of scenes from books</b></a>
+        <br>
+        A. Cropper
+        <br>
+        ICCSW 2014
+        <br>
+        <a href="http://andrewcropper.com/slides/iccsw14-scenes-slides.pdf">slides</a>
+      </li>
+    </ol>
+
+    <p>Others</p>
+    <ol>
+
+      <li>
+        <a href="https://arxiv.org/abs/2008.07912.pdf"><b>Inductive logic programming at 30: a new introduction</b></a>
+        <br>
+        A. Cropper and S. Dumančić.
+        <br>
+        Under review.
+      </li>
+
+    </ol>
     </div>
+
   </body>
 </html>
