--- a/join.html
+++ b/join.html
@@ -12,8 +12,8 @@
 
       body{
         font-family: 'Roboto', sans-serif;
-        font-size:15pt;
-        line-height: 1.5;
+        font-size:16pt;
+        line-height: 1.6;
       }
 
       a:link, a:visited {
@@ -64,7 +64,6 @@
           <b>
             <a href="index.html">About</a>
             <a href="people.html">People</a>
-            <a href="pubs.html">Publications</a>
             <a href="join.html">Join</a>
           </b>
         </p>
@@ -75,22 +74,22 @@
         Postdocs.
       </b>
       We will recruit multiple 1-3 year postdocs in 2021, 2022, and 2023 to work on the EPSRC-funded project <i><b><a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
-      We are looking for people interested in logic and machine learning.
-      If interested (or to find out more) please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us.
+      If interested please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us.
     </b>
     <p>
       <b>DPhil/PhD students.</b>
-      We are looking for keen students. You can propose a specific research topic, or may <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">ask </a> for suggestions before applying.
+      We are looking for enthusiastic students.
+      Please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us if interested.
       Information on applying to the Oxford DPhil program for Computer Science is available <a href="https://www.ox.ac.uk/admissions/graduate/courses/dphil-computer-science">here</a>.
     </p>
 
     <p>
-      <b>3rd/4th year students and MSc students.</b>
-      We are happy to supervise student projects.
-      A small list of projects is available <a href="http://www.cs.ox.ac.uk/teaching/courses/projects/">here</a> and
-      <a href="projects.txt">here</a>.
-      If interested, <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us with (i) your CV, (ii) the courses you will take, and (iii) and a brief outline of your interests and expertises.
-      Some previous projects are listed below.
+      <b>Student projects</b>
+      We are happy to supervise 3rd/4th year and MSc student projects.
+      Some project descriptions are available <a href="http://www.cs.ox.ac.uk/teaching/courses/projects/">here</a> and
+      <a href="projects.html">here</a>.
+      If interested, <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us.
+      Previous student projects are listed below.
       <ul>
 
 
