--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 
       <p>
         The Logic and Learning (LOL) lab is in the computer science department at the University of Oxford.
-        We work on logic and machine learning, i.e. <b><a href="https://arxiv.org/pdf/2008.07912.pdf">Inductive Logic Programming</a></b> (ILP).
+        We work on program synthesis: using machine learning to write computer programs.
+        We focus on <b><a href="https://arxiv.org/pdf/2008.07912.pdf">inductive logic programming</a></b> (ILP), which combines logic and machine learning.
         We maintain the ILP system <a href="
         https://github.com/logic-and-learning-lab/Popper"><b>Popper</b></a>.
       </p>
