--- a/join.html
+++ b/join.html
@@ -92,6 +92,17 @@
       Previous student projects are listed below.
       <ul>
 
+      <li>Cristian Dinu, BA,
+        Overcoming the language bias nightmare in inductive logic programming
+      </li>
+
+      <li>Victor Vasiesiu, BA,
+        Inductive general game playing
+      </li>
+
+      <li>Bogdan Cretu, BA,
+        Constraint-driven multi-task learning
+      </li>
 
       <li>John Wahlig, MSc,
         Learning logic programs from noisy failures
@@ -99,6 +110,10 @@
 
       <li>Brad Hunter, MSc,
         Preprocessing in inductive logic programming
+      </li>
+
+      <li>Cristian Dinu, BA,
+        Parallel inductive logic programming
       </li>
 
       <li>Andrei Diaconu, BA,
