--- a/projects.html
+++ b/projects.html
@@ -98,16 +98,16 @@
 
 --------------------------------------------------
 
-<div><b>Title</b>: Learning programs with new objects</div>
-<div><b>Suitability</b>: MSc</div>
+<div><b>Title</b>: Efficiently learning efficient logic programs</div>
+<div><b>Suitability</b>: 4th/MSc</div>
 
-<div><b>Abstract</b>:  Scientists often posit the existence of unknown objects to explain empirical observations. However, existing machine learning approaches struggle to perform similar reasoning. To address this limitation, the goal of this project is to develop an inductive logic programming (ILP) system [1,2] that can invent new objects to explain observations.  The project is a mix of theory, implementation, and experimentation.</div>
+<div><b>Abstract</b>:  Inductive logic programming (ILP) [1] is a form of machine learning based on mathematical logic. Given examples and background knowledge (BK), the goal of ILP is to induce a hypothesis (a set of logical rules) that with the BK generalises (logically entails) the examples. Metaopt [2] is an ILP system that learns efficient logic programs from examples. For instance, given input/output examples of unsorted/sorted lists Metaopt learns quicksort rather than bubblesort.  Metaopt works by iteratively finding more efficient hypotheses.  However, in the worst-case, Metaopt needs to consider every hypothesis. The goal of this project is to improve Metaopt's search procedure. This work is a mix of theory, implementation, and experimentation. </div>
 
 <div><b>Prerequisites</b>: logic programming (preferably answer set programming and Prolog).</div>
 
 
 <div>[1] Inductive logic programming at 30: a new introduction. A. Cropper and S. Dumančić.</div>
-<div>[2] Turning 30: new ideas in inductive logic programming. A. Cropper, S. Dumančić, and S.H. Muggleton. IJCAI 2020</div>
+<div>[2] Learning efficient logic programs  A. Cropper and S.H. Muggleton  Machine learning 2019 </div>
 
 
 --------------------------------------------------
@@ -123,6 +123,17 @@
 <div>[1] Inductive logic programming at 30: a new introduction. A. Cropper and S. Dumančić.</div>
 <div>[2] Turning 30: new ideas in inductive logic programming. A. Cropper, S. Dumančić, and S.H. Muggleton. IJCAI 2020</div>
 
+--------------------------------------------------
+
+<div><b>Title</b>: Learning programs with new objects</div>
+<div><b>Suitability</b>: MSc</div>
+
+<div><b>Abstract</b>:  Scientists often posit the existence of unknown objects to explain empirical observations. However, existing machine learning approaches struggle to perform similar reasoning. To address this limitation, the goal of this project is to develop an inductive logic programming (ILP) system [1,2] that can invent new objects to explain observations.  The project is a mix of theory, implementation, and experimentation.</div>
+
+<div><b>Prerequisites</b>: logic programming (preferably answer set programming and Prolog).</div>
+
+<div>[1] Inductive logic programming at 30: a new introduction. A. Cropper and S. Dumančić.</div>
+<div>[2] Turning 30: new ideas in inductive logic programming. A. Cropper, S. Dumančić, and S.H. Muggleton. IJCAI 2020</div>
 
 ----------
 
